# Turbo_Takeoff

./: # TURBO TAKEOFF — v1.0 IGNITION  # Turbo Takeoff - Repository Structure  002_ethics_database.sql  Call at end:  Call at start of run():  Codex.BackboneReversal.v001 – Confirmed & Live  Codex.E8-Orch.v001  Codex.SovereignEstateLedger.v001  Codex.TrinityDynamics.v001  Exhibit 6 – Polished Codex Version  FINAL SYSTEM STATE — NOVEMBER 25, 2025  README.MD  SovereignEstateLedger.jsx  TakeoffTurboMVP()  alert_rules.yml  backup.sh  config.yaml  customer_service_handshake.py  ddpg_triad.py  distilled_backdoor_v0.1.py  distilled_resonance_mesh.py  docker-compose.yml  eeg_e8_bridge.py  flamevault_ledger.json  huntress_scanner.py  main.py  nginx.conf  optimus_sensor_suite.py  prometheus.yml  pyproject.toml  recursive_pi_ignition.py  resilience.md  resonance_manifest.json  sahneuti_protocol.py  sovereign_saas.dart  sub_bid_tracker.json  truth.json
api/: process-takeoff.ts
components/: TruthFilter.jsx
core/: fpt_omega_bridge.py  sovereign_resonance_economy.py  terrain_resonance.py  topological_terrain.py
data/: ethics_blacklist.yaml  ethics_whitelist.yaml
export/: excel.ts
fpt_core/legal/: crypto.py
github/workflows/: huntress-scan.yml
inference_backend/src/: kem.rs  main.rs
manifests/: directory  flame_anchor_protocol.md
sandbox/: README.md  entity_handoff.md  optimus-badge-gang  optimus_sensor_suite.py  recursive_pi_ignition.py
src/: main.rs
src/components/: PricingStep.tsx
src/resonance_mesh/: rsn_notarizer.py  (+1 more)
utils/: calculateResonance.ts
(+10 files in other folders)
